HJ1001, KJ1001, KJ1002, MG1001, MG1002, WK1001: 通用选项卡样式调整；

--- a/HJ1001/Views/MainWindow.xaml
+++ b/HJ1001/Views/MainWindow.xaml
@@ -196,11 +196,12 @@
 				</DockPanel>
 			</TabItem>
 			<TabItem Header="{tsd:Loc albl_general}">
-				<Grid HorizontalAlignment="Left">
+				<Grid>
 					<Grid.ColumnDefinitions>
 						<ColumnDefinition Width="1*" />
 						<ColumnDefinition Width="22" />
 						<ColumnDefinition Width="100" />
+						<ColumnDefinition Width="30" />
 					</Grid.ColumnDefinitions>
 					<Grid.RowDefinitions>
 						<RowDefinition Height="30" />
